--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
                 <p>If you’re not making someone else’s life better, then you’re wasting your time. Your life will become better by making other lives better.</p>
                 <p>Staff<br>
 
-                    Dr Josephine Griffith (Coordinator) <br>       
-                    Dr Colm O'Riordan (Coordinator)      <br> 
-                    Dr Seamus Hill     .</p>
+                    Amelia Ritahani Bt. Ismail (Assoc. Prof. Ts. Dr.)<br>       
+                     Dr. Amir Aatieff(Asst. Prof.)      <br> 
+                     Dr. Andi Fitriah Abdul Kadir</p>
                 <button class="primary_btn">More staff</button>
             </div>
             <div class="blog_img">
@@ -152,11 +152,10 @@
                 <p>Research group activity</p>
                 <p>Collaborators<br>
 
-                    Dr Conn Mulvihil  <br> 
-                    Dr James Cruickshank <br>  
-                    Dr John Newell   <br> 
-                    Dr Sarah Berthaud <br> 
-                    Dr Ronan Cummins  </p>
+                    Amelia Ritahani Bt. Ismail (Assoc. Prof. Ts. Dr.)<br>       
+                    Dr. Amir Aatieff(Asst. Prof.)      <br> 
+                    Dr. Andi Fitriah Abdul Kadir</p>
+                    Dr Raini  </p>
                 <button class="primary_btn">How to Collaboration</button>
             </div>
         </section>
@@ -176,7 +175,7 @@
                     <img src="images/logo iium.png" alt="">
                     <h3 class="title-sm">About</h3>
                     <p class="text">
-                        IIUM
+                        KULLIYYAH OF INFORMATION AND COMMUNICATION TECHNOLOGY
                     </p>
                 </div>
 
